--- a/SwarmController/MainWindow.xaml
+++ b/SwarmController/MainWindow.xaml
@@ -26,12 +26,14 @@
                 Grid.Row="0"
                 Click="btn_Surveillance_Click"/>
 
-        <ListView x:Name="lv_Log" HorizontalAlignment="Right" VerticalAlignment="Top" Width="300" Height="150"
+        <ListView x:Name="lv_Log" HorizontalAlignment="Right" VerticalAlignment="Top" Width="400" Height="150"
                   Margin="0,0,0,20"
                   Grid.Row="0"
                   ItemsSource="{Binding logList}"/>
         <Button x:Name="btn_StartMission" Content="Start Mission" HorizontalAlignment="Left" Margin="132,20,0,0" VerticalAlignment="Top" Width="76"
                 Click="btn_StartMission_Click"/>
+        <Button x:Name="btn_CreateDrones" Content="Create Drones" HorizontalAlignment="Left" Margin="253,20,0,0" VerticalAlignment="Top" Width="80"
+                Click="btn_CreateDrones_Click"/>
 
     </Grid>
 </Window>
