--- a/SwarmController/Markers/DroneMarker.xaml
+++ b/SwarmController/Markers/DroneMarker.xaml
@@ -7,5 +7,6 @@
              mc:Ignorable="d">
     <Grid>
         <Image Source="../Resources/drone.png" Width="30" Height="30"/>
+        <TextBlock x:Name="port" Text="0" HorizontalAlignment="Left" Margin="12,-15,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
     </Grid>
 </UserControl>
