--- a/SwarmController/MainWindow.xaml
+++ b/SwarmController/MainWindow.xaml
@@ -23,7 +23,7 @@
                            MouseMove="mapView_MouseMove"/>
 
         <Button x:Name="btn_Surveillance" Content="Surveillance" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75"
-                Margin="20"
+                Margin="16,87,0,0"
                 Grid.Row="0"
                 Click="btn_Surveillance_Click"/>
 
@@ -31,9 +31,9 @@
                   Margin="0,0,0,20"
                   Grid.Row="0"
                   ItemsSource="{Binding logList}"/>
-        <Button x:Name="btn_StartMission" Content="Start Mission" HorizontalAlignment="Left" Margin="132,20,0,0" VerticalAlignment="Top" Width="76"
+        <Button x:Name="btn_StartMission" Content="Start Mission" HorizontalAlignment="Left" Margin="461,22,0,0" VerticalAlignment="Top" Width="76"
                 Click="btn_StartMission_Click"/>
-        <Button x:Name="btn_CreateDrones" Content="Create Drones" HorizontalAlignment="Left" Margin="253,20,0,0" VerticalAlignment="Top" Width="80"
+        <Button x:Name="btn_CreateDrones" Content="Create Drones" HorizontalAlignment="Left" Margin="365,135,0,0" VerticalAlignment="Top" Width="80"
                 Click="btn_CreateDrones_Click"/>
         <TextBlock FontWeight="Bold" HorizontalAlignment="Left" Margin="10,17,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Lat:" VerticalAlignment="Top"/>
         <TextBlock FontWeight="Bold" HorizontalAlignment="Left" Margin="110,17,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="L"/><Run Text="ng"/><Run Text=":"/></TextBlock>
@@ -42,8 +42,12 @@
         <Button x:Name="btn_close63" Content="Close 5763" HorizontalAlignment="Left" Margin="16,135,0,0" VerticalAlignment="Top" Width="74" Click="btn_close63_Click"/>
         <Button x:Name="btn_close73" Content="Close 5773" HorizontalAlignment="Left" Margin="135,135,0,0" VerticalAlignment="Top" Width="74" Click="btn_close73_Click"/>
         <Button x:Name="btn_close83" Content="Close 5783" HorizontalAlignment="Left" Margin="259,135,0,0" VerticalAlignment="Top" Width="74" Click="btn_close83_Click"/>
-        <TextBox x:Name="tb_numberOfDronesInMission" HorizontalAlignment="Left" Height="23" Margin="147,75,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Margin="20,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="# of Drones in Mission"/><Run Text=":"/></TextBlock>
+        <TextBox x:Name="tb_numberOfDronesInMission" HorizontalAlignment="Left" Height="23" Margin="143,23,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"/>
+        <TextBlock HorizontalAlignment="Left" Margin="16,24,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="# of Drones in Mission"/><Run Text=":"/></TextBlock>
+        <ComboBox x:Name="cmb_missionNames" HorizontalAlignment="Left" Margin="305,24,0,0" VerticalAlignment="Top" Width="120"
+                  ItemsSource="{Binding missionNames}"/>
+        <TextBox x:Name="tb_missionName" HorizontalAlignment="Left" Height="23" Margin="143,54,0,0" TextWrapping="Wrap" Text="fat" VerticalAlignment="Top" Width="120"/>
+        <TextBlock HorizontalAlignment="Left" Margin="16,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Mission Name:"/>
 
     </Grid>
 </Window>
