--- a/SwarmController/MainWindow.xaml
+++ b/SwarmController/MainWindow.xaml
@@ -34,15 +34,15 @@
                   ItemsSource="{Binding logList}"/>
         <Button x:Name="btn_StartMission" Content="Start Mission" HorizontalAlignment="Left" Margin="461,22,0,0" VerticalAlignment="Top" Width="76"
                 Click="btn_StartMission_Click"/>
-        <Button x:Name="btn_CreateDrones" Content="Create Drones" HorizontalAlignment="Left" Margin="243,91,0,0" VerticalAlignment="Top" Width="80"
+        <Button x:Name="btn_CreateDrones" Content="Create Drones" Visibility="Hidden" HorizontalAlignment="Left" Margin="243,91,0,0" VerticalAlignment="Top" Width="80"
                 Click="btn_CreateDrones_Click"/>
         <TextBlock FontWeight="Bold" HorizontalAlignment="Left" Margin="10,17,0,0" Grid.Row="3" TextWrapping="Wrap" Text="Lat:" VerticalAlignment="Top"/>
         <TextBlock FontWeight="Bold" HorizontalAlignment="Left" Margin="110,17,0,0" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="L"/><Run Text="ng"/><Run Text=":"/></TextBlock>
         <TextBlock x:Name="tb_Lat" HorizontalAlignment="Left" Margin="42,17,0,0" Grid.Row="3" TextWrapping="Wrap" Text="0" VerticalAlignment="Top"/>
         <TextBlock x:Name="tb_Lng" HorizontalAlignment="Left" Margin="145,17,0,0" Grid.Row="3" TextWrapping="Wrap" Text="0" VerticalAlignment="Top"/>
-        <Button x:Name="btn_close63" Content="Close 5763" HorizontalAlignment="Left" Margin="16,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close63_Click"/>
-        <Button x:Name="btn_close73" Content="Close 5773" HorizontalAlignment="Left" Margin="90,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close73_Click"/>
-        <Button x:Name="btn_close83" Content="Close 5783" HorizontalAlignment="Left" Margin="164,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close83_Click"/>
+        <Button x:Name="btn_close63" Content="Close 5763" Visibility="Hidden" HorizontalAlignment="Left" Margin="16,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close63_Click"/>
+        <Button x:Name="btn_close73" Content="Close 5773" Visibility="Hidden" HorizontalAlignment="Left" Margin="90,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close73_Click"/>
+        <Button x:Name="btn_close83" Content="Close 5783" Visibility="Hidden" HorizontalAlignment="Left" Margin="164,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close83_Click"/>
         <TextBox x:Name="tb_numberOfDronesInMission" HorizontalAlignment="Left" Height="23" Margin="143,23,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="16,24,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="# of Drones in Mission"/><Run Text=":"/></TextBlock>
         <ComboBox x:Name="cmb_missionNames" HorizontalAlignment="Left" Margin="305,24,0,0" VerticalAlignment="Top" Width="120"
@@ -59,7 +59,7 @@
             <ItemsControl x:Name="droneInfoCard" ItemsSource="{Binding droneInfoList}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <components:DroneInfoCard Margin="20" BorderThickness="2" BorderBrush="Black"/>
+                        <components:DroneInfoCard Margin="10 10 20 10" BorderThickness="2" BorderBrush="Black" Width="270" Height="140"/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
                 <ItemsControl.ItemsPanel>
