--- a/SwarmController/MainWindow.xaml
+++ b/SwarmController/MainWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:components="clr-namespace:SwarmController.Views"
         xmlns:gmaps="clr-namespace:GMap.NET.WindowsPresentation;assembly=GMap.NET.WindowsPresentation"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1000">
+        Title="MainWindow" Height="700" Width="1000"
+        Loaded="Window_Loaded">
 
     <Grid>
         <Grid.RowDefinitions>
