--- a/SwarmController/MainWindow.xaml
+++ b/SwarmController/MainWindow.xaml
@@ -97,36 +97,39 @@
         </Grid>
 
 
-
-
-
-        <Button x:Name="btn_CreateDrones" Content="Create Drones" Visibility="Hidden" HorizontalAlignment="Left" Margin="187,91,0,0" VerticalAlignment="Top" Width="80"
-                Click="btn_CreateDrones_Click" Grid.Column="1"/>
-                <Button x:Name="btn_close63" Content="Close 5763" Visibility="Hidden" HorizontalAlignment="Left" Margin="16,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close63_Click" Grid.ColumnSpan="2"/>
-        <Button x:Name="btn_close73" Content="Close 5773" Visibility="Hidden" HorizontalAlignment="Left" Margin="34,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close73_Click" Grid.Column="1"/>
-        <Button x:Name="btn_close83" Content="Close 5783" Visibility="Hidden" HorizontalAlignment="Left" Margin="108,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close83_Click" Grid.Column="1"/>
-        
-
-
-        <ScrollViewer
-            Grid.Row="2"
-            Margin="20 20 20 20"
-            VerticalScrollBarVisibility="Auto"
-            x:Name="sv_droneInfo" Grid.ColumnSpan="2">
-            <ItemsControl x:Name="droneInfoCard" ItemsSource="{Binding droneInfoList}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <components:DroneInfoCard Margin="10 10 20 10" BorderThickness="2" BorderBrush="Black" Width="270" Height="150"/>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel />
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-            </ItemsControl>
-        </ScrollViewer>
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <StackPanel x:Name="sp_droneNumbers" Orientation="Vertical" Margin="13">
+                <TextBlock x:Name="tb_availableNumberOfDrones" Text="{Binding availableNumberOfDrones}" FontSize="60" Margin="-10" HorizontalAlignment="Center"/>
+                <TextBlock Text="Available" FontSize="20" Margin="0,0,0,5" HorizontalAlignment="Center"/>
+                <TextBlock x:Name="tb_inMissionNumberOfDrones" Text="{Binding inMissionNumberOfDrones}" FontSize="60" Margin="-10" HorizontalAlignment="Center"/>
+                <TextBlock Text="In Mission" FontSize="20" HorizontalAlignment="Center"/>
+            </StackPanel>
+            <ScrollViewer
+                Margin="0 20 20 20"
+                VerticalScrollBarVisibility="Auto"
+                x:Name="sv_droneInfo" Grid.ColumnSpan="2">
+                <ItemsControl x:Name="droneInfoCard" ItemsSource="{Binding droneInfoList}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <components:DroneInfoCard Margin="10 10 20 10" BorderThickness="2" BorderBrush="Black" Width="270" Height="150"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+            </ScrollViewer>
+        </StackPanel>
 
 
     </Grid>
 </Window>
+
+
+<!--<Button x:Name="btn_CreateDrones" Content="Create Drones" Visibility="Hidden" HorizontalAlignment="Left" Margin="187,91,0,0" VerticalAlignment="Top" Width="80"
+                Click="btn_CreateDrones_Click" Grid.Column="1"/>
+<Button x:Name="btn_close63" Content="Close 5763" Visibility="Hidden" HorizontalAlignment="Left" Margin="16,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close63_Click" Grid.ColumnSpan="2"/>
+<Button x:Name="btn_close73" Content="Close 5773" Visibility="Hidden" HorizontalAlignment="Left" Margin="34,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close73_Click" Grid.Column="1"/>
+<Button x:Name="btn_close83" Content="Close 5783" Visibility="Hidden" HorizontalAlignment="Left" Margin="108,91,0,0" VerticalAlignment="Top" Width="74" Click="btn_close83_Click" Grid.Column="1"/>-->
