--- a/SwarmController/MainWindow.xaml
+++ b/SwarmController/MainWindow.xaml
@@ -7,8 +7,7 @@
         xmlns:components="clr-namespace:SwarmController.Views"
         xmlns:gmaps="clr-namespace:GMap.NET.WindowsPresentation;assembly=GMap.NET.WindowsPresentation"
         mc:Ignorable="d"
-        Title="Swarm Controller" Height="700" Width="1070"
-        Loaded="Window_Loaded">
+        Title="Swarm Controller" Height="700" Width="1070">
 
     <Grid>
         <Grid.RowDefinitions>
